--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -1,8 +1,6 @@
 {{#if unverifiedReports.hasReports}}
   <li class="nav-top-list-item" title="You have reports to verify">
-    {{#link-to "analysis.index"
-               (query-params
-                 fromDate=null
+    <LinkTo @route="analysis.index" @query={{hash fromDate=null
                  toDate=unverifiedReports.reportsToDate
                  reviewer=session.data.user.id
                  editable=1
@@ -14,11 +12,9 @@
                  billingType=null
                  costCenter=null
                  review=""
-                 notBillable=""
-               )
-    }}
+                 notBillable=""}}>
       {{fa-icon "exclamation-triangle"}}
       {{unverifiedReports.amountReports}}
-    {{/link-to}}
+    </LinkTo>
   </li>
 {{/if}}
