--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -16,14 +16,7 @@ as |t|}}
       {{t.task}}
     </div>
     <div class="form-group" data-test-tracking-comment>
-      {{input
-        type        = 'text'
-        class       = 'form-control'
-        placeholder = 'Comment'
-        name        = 'comment'
-        value       = tracking.activity.comment
-        disabled    = tracking.activity.active
-      }}
+      <Input @type="text" class="form-control" placeholder="Comment" @name="comment" @value={{tracking.activity.comment}} @disabled={{tracking.activity.active}} />
     </div>
     <div class="form-group">
       {{record-button
