--- a/app/components/sy-calendar/template.hbs
+++ b/app/components/sy-calendar/template.hbs
@@ -1,8 +1,8 @@
 {{#let (assign publicAPI (hash
-  nav=(component navComponent calendar=(readonly publicAPI) onCenterChange=(readonly onCenterChange))
-  days=(component daysComponent calendar=(readonly publicAPI) onSelect=(readonly onSelect))
+  Nav=(component navComponent calendar=(readonly publicAPI) onCenterChange=(readonly onCenterChange))
+  Days=(component daysComponent calendar=(readonly publicAPI) onSelect=(readonly onSelect))
 )) as |calendar|}}
-  <calendar.nav>
+  <calendar.Nav>
     <span class="nav-select-month">
       {{#let (moment-format calendar.center 'MMMM') as |currentMonth|}}
         {{currentMonth}}
@@ -23,6 +23,6 @@
         </select>
       {{/let}}
     </span>
-  </calendar.nav>
-  {{calendar.days}}
+  </calendar.Nav>
+  <calendar.Days/>
 {{/let}}
