--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -2,7 +2,7 @@
   <button class="nav-toggle nav-top-toggle" {{action (toggle 'expand' this) on='click'}}>
     <span class="nav-toggle-icon"></span>
   </button>
-  {{#link-to 'index'}}
+  <LinkTo @route="index">
     {{timed-clock}}
     <div class="nav-top-header-title">
       Timed
@@ -10,46 +10,46 @@
         v{{app-version hideSha=true}}
       </div>
     </div>
-  {{/link-to}}
+  </LinkTo>
 </header>
 <section class="nav-top-body">
   <ul class="nav-top-list">
     <li class="nav-top-list-item">
-      {{#link-to 'index'}}
+      <LinkTo @route="index">
         {{fa-icon 'clock-o'}} Tracking
-      {{/link-to}}
+      </LinkTo>
     </li>
     {{#unless navMobile}}
       <li class="nav-top-list-item">
-        {{#link-to 'analysis'}}
+        <LinkTo @route="analysis">
           {{fa-icon 'line-chart'}} Analysis
-        {{/link-to}}
+        </LinkTo>
       </li>
       <li class="nav-top-list-item">
-        {{#link-to 'statistics'}}
+        <LinkTo @route="statistics">
           {{fa-icon 'bar-chart'}} Statistics
-        {{/link-to}}
+        </LinkTo>
       </li>
       <li class="nav-top-list-item">
-        {{#link-to 'projects'}}
+        <LinkTo @route="projects">
           {{fa-icon 'briefcase'}} Projects
-        {{/link-to}}
+        </LinkTo>
       </li>
     {{/unless}}
     {{#if session.data.user.isSuperuser}}
       <li class="nav-top-list-item">
-        {{#link-to 'users.index'}}
+        <LinkTo @route="users.index">
           {{fa-icon 'users'}} Users
-        {{/link-to}}
+        </LinkTo>
       </li>
     {{/if}}
   </ul>
   <ul class="nav-top-list nav-top-list--right">
     {{report-review-warning}}
     <li class="nav-top-list-item">
-      {{#link-to 'users.edit' session.data.user.id}}
+      <LinkTo @route="users.edit" @model={{session.data.user.id}}>
         {{fa-icon 'user'}} {{session.data.user.fullName}}
-      {{/link-to}}
+      </LinkTo>
     </li>
     <li class="nav-top-list-item">
       <a href="#" data-test-logout {{action (optional on-logout)}}>
