--- a/app/components/user-selection/template.hbs
+++ b/app/components/user-selection/template.hbs
@@ -8,7 +8,7 @@
     tagName            = 'div'
     class              = 'user-select'
     allowClear         = true
-    onchange           = (action on-change)
+    onChange           = (action on-change)
     extra              = (hash
       lazy             = true
       selectedTemplate = selectedTemplate
