--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -1,13 +1,13 @@
 {{#sy-modal visible=visible as |modal|}}
-  {{#modal.body}}
+  <modal.body>
     <div class="text-center">
       <h1>Welcome to Timed!</h1>
       <img style="max-width:50%" src="/assets/logo.svg">
       <h4>Would you like to take a tour?</h4>
     </div>
-  {{/modal.body}}
+  </modal.body>
 
-  {{#modal.footer}}
+  <modal.footer>
     <button
       type="button"
       class="btn btn-never"
@@ -31,5 +31,5 @@
       {{action on-start}}>
       Sure
     </button>
-  {{/modal.footer}}
+  </modal.footer>
 {{/sy-modal}}
